# simenvbenchmark

./: .dockerignore  .envrc  .gitignore  LICENSE  README.md  instanz_manager.py  requirements.txt  run_all_benchmarks.sh
benchmark_controller/: __init__.py  generate_spheres_worlds.py  nnn_task_env.py  task_env.py
dockerfiles/: Dockerfile
environments/Gazebo/catkin_ws/src/ur_robotiq_connector/: CMakeLists.txt  package.xml
environments/Gazebo/catkin_ws/src/ur_robotiq_connector/launch/: ur10e_3f-gripper.launch  ur10e_3f-gripper_without_world.launch
environments/Gazebo/catkin_ws/src/ur_robotiq_connector/launch/inc/: controller_utils.launch.xml  load_ur10e_with_3f.launch.xml  load_ur_with_3f.launch.xml  ur_control_without_world.launch.xml
environments/Gazebo/catkin_ws/src/ur_robotiq_connector/urdf/: ur10e_3f-gripper.xacro
environments/Gazebo/controller/: __init__.py  nnn_env.py  robot_env.py
environments/MuJoCo/controller/: __init__.py  nnn_env.py  robot_env.py  simulation_interface.py
environments/MuJoCo/environment/: RobotSim.xml  init_state_setup.json  nnnSim.xml
environments/PyBullet/controller/: __init__.py  nnn_env.py  robot_env.py  simulation_interface.py
environments/PyBullet/environment/: nnnSim.xml  test_case_main_MJCF.xml
environments/WeBots/controller/: __init__.py  nnn_env.py  robot_env.py  simulation_interface.py
environments/WeBots/protos/: Robotiq3fGripper.proto  cylinder.wbo
hardware_monitoring/: __init__.py  hardware_data_assigner.py  hardware_data_postprocessor.py  hardware_monitor.py  hardware_monitoring.md
(+54 files in other folders)
